# AxelTTS

./: .gitignore  README.md  config.py  default_config.toml  models.py  pyproject.toml  tts.py
tts/: __main__.py  config.py  logger_config.py  models.py  tts.py  tts_client.py
