[project]
name = "AxelTTS"
version = "0.2.0"
description = "TTS for AxelChat https://github.com/3dproger/AxelChat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "googletrans>=4.0.2",
    "gtts>=2.5.4",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.7",
    "pydub>=0.25.1",
    "websockets>=15.0.1",
]
